<resources>
    <string name="app_name">南哪课表</string>
    <string name="app_version">0.2.2</string>
    <string name="app_LTS">0.2.2 (LTS)</string>

    <string name="qq_number">1455169173</string>
    <string name="pay_code">FKX00710CQCHIHK4B9CA31</string>
    <string name="bugly_appid">1736b669d7</string>

    <string name="user_add">手动添加</string>
    <string name="import_nju">导入南京大学课表</string>
    <string name="kb_manage">课表管理</string>
    <string name="del_all">删除全部</string>

    <string name="default_noon_node">4</string>
    <string name="default_course_name">默认课表</string>

    <string name="app_preference_app_is_first_start">app_is_first_start</string>
    <string name="app_preference_hide_fab">hide_fab</string>
    <string name="app_preference_start_week_begin_millis">start_week_begin_date</string>
    <string name="app_preference_max_node">max_node</string>
    <string name="app_preference_noon_node">noon_node</string>
    <string name="app_preference_show_noon">show_noon</string>
    <!--<string name="app_preference_current_sd_name">current_sd_name</string>-->
    <!--<string name="app_preference_theme">theme</string>-->
    <string name="app_preference_theme">0</string>
    <string name="app_preference_bg_iamge_path">bg_image_path</string>
    <string name="app_preference_bg_enabled">bg_enabled</string>
    <string name="app_preference_current_cs_name_id">current_sd_name_id</string>


    <!--<string name="captcha_err">验证码不正确</string>-->
    <string name="captcha_err">验证码错误！</string>
    <string name="pwd_err">密码错误</string>
    <string name="timeout_err">验证码已过期</string>
    <string name="string_course_time">%1$s&#160;&#160;%2$d-%3$d 节</string>
    <string name="setting">设置</string>
    <string name="add_course">添加课程</string>
    <string name="course_name">课程名称</string>
    <string name="deleting">正在删除</string>
    <string name="add_succeed">添加成功</string>
    <string name="select_course_time">选择上课时间</string>
    <string name="select_week_count">选择周数</string>
    <string name="feedback">反馈</string>
    <string name="please_wait_a_moment">请稍等…</string>
    <string name="qq_not_installed">抱歉，您没有安装QQ/TIM！</string>
    <string name="alipay_not_installed">抱歉，您没有安装支付宝！</string>
    <string name="string_course_time_2"> %1$s&#160;&#160;%2$d 节</string>
    <string name="string_week_range">第%1$d-%2$d 周</string>
    <string name="show_noon_course">显示中午课程</string>
    <string name="show_noon_course_summary">显示中午时间的课程</string>
    <string name="hide_fab">隐藏添加按钮</string>
    <string name="hide_fab_summary">隐藏主界面右下角添加按钮</string>
    <string name="other">其他</string>
    <string name="other_preference">其他配置</string>
    <string name="text_preference">偏好设置</string>
    <string name="edit_class_schedule">编辑课表</string>
    <string name="warning">警告</string>
    <string name="theme_preference">颜色风格</string>
    <string name="now_version">有新版本</string>
    <string name="about">关于</string>
    <string name="donate">投喂</string>

    <string name="github_lib">mnnyang/ClassSchedule\norg.jsoup:jsoup:1.10.3\nio.reactivex:rxjava:1.1.3\nio.reactivex:rxandroid:1.0.1\ndidikee:AndroidDonate:0.1.0\ncom.google.code.gson:gson:2.8.2\ncom.zhy:okhttputils:2.6.2\nwangjie/wheelview</string>
    <string name="github_njuclassschedule">https://github.com/idealclover/NJU-Class-Shedule-Android</string>
    <string name="donate_njuclassschedule">https://github.com/idealclover/NJU-Class-Shedule-Android/blob/master/README.md</string>

    <string name="blog">傻翠的个人博客（欢迎来玩）</string>
    <string name="blog_url">https://idealclover.top</string>

    <string name="check_update">检查更新</string>
    <string name="update_succeed">更新成功</string>
    <string name="password">密码</string>
    <string name="captcha">验证码</string>
    <string name="refresh_captcha">点击刷新</string>
    <string name="please_input_course_table_name">请输入课程表名称</string>
    <string name="course_name_can_not_be_empty">课表名不能为空</string>
    <string name="course_name_is_conflicting">课程表名称已存在</string>
    <string name="you_can_not_delete_the_current_class_schedule">不能删除当前课表</string>
    <string name="edit_succeed">修改成功</string>
    <string name="course_name_already_exists">课表名称已经存在</string>
    <string name="user_add_summary">手动添加课程表数据</string>
    <string name="import_nju_description">登录南京大学教务系统导入课程表</string>
    <string name="kb_manage_description">添加或删除课表数据</string>
    <string name="more_pref">更多选择</string>
    <string name="more_pref_summary">自定义其他参数</string>
    <string name="feedback_summary">通过QQ/TIM反馈意见</string>
    <string name="donate_summary">给傻翠买支棒棒糖吧！</string>
    <string name="donate_list">投喂名单链接</string>
    <string name="checking_for_updates">检查更新中…</string>
    <string name="already_the_latest_version">已是最新版本</string>
    <string name="access_err">抱歉，访问出错</string>
    <string name="access_update_err">检查更新失败</string>
    <string name="confirm_to_delete">确定删除?</string>
    <string name="edit_course">编辑课程</string>
    <string name="delete">删 除</string>
    <string name="delete_succeed">删除成功</string>
    <string name="conf">配置</string>
    <string name="background_image">背景图片</string>
    <string name="conf_interface">界面</string>
    <string name="storage_explanation">需要读取存储空间和拍照权限才能继续操作!</string>
    <string name="select_image_failed">图片选择失败</string>

    <string name="bg_enabled">已启用背景</string>
    <string name="bg_disabled">已禁用背景</string>
    <string name="select_image_succeed">设置背景成功</string>
    <string name="nju">南京大学</string>
    <string name="other_school">其他高校</string>
    <string name="school">学校</string>
    <string name="please_input_school_url">请输入教务管理系统网址</string>
    <string name="can_not_be_empty">不能为空</string>

    <string-array name="classrooms">
        <item>仙Ⅰ-</item>
        <item>仙Ⅱ-</item>
        <item>逸A-</item>
        <item>逸B-</item>
        <item>逸C-</item>
        <item>基础实验楼甲</item>
        <item>基础实验楼乙</item>
        <item>基础实验楼丙</item>
        <item>实验楼甲</item>
        <item>实验楼乙</item>
        <item>实验楼丙</item>
    </string-array>
</resources>
