<?xml version="1.0" encoding="utf-8"?><!--最新栏目的新闻-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:layout="@layout/preference_item"
                  android:title="@string/setting">

    <PreferenceCategory
        android:title="@string/edit_class_schedule">
        <Preference
            android:layout="@layout/preference_item"
            android:summary="@string/user_add_summary"
            android:title="@string/user_add"/>

        <Preference
            android:layout="@layout/preference_item"
            android:summary="@string/import_nju_description"
            android:title="@string/import_nju"/>

        <Preference
            android:layout="@layout/preference_item"
            android:summary=""
            android:title="@string/kb_manage"/>

        <Preference
            android:layout="@layout/preference_item"
            android:summary="删除全部课程数据"
            android:title="@string/del_all"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/text_preference">

        <Preference
            android:layout="@layout/preference_item_theme"
            android:summary=""
            android:title="@string/theme_preference"/>

        <CheckBoxPreference
            android:key="@string/app_preference_show_noon"
            android:layout="@layout/preference_item"
            android:summary="@string/show_noon_course_summary"
            android:title="@string/show_noon_course"/>

        <CheckBoxPreference
            android:key="@string/app_preference_hide_fab"
            android:layout="@layout/preference_item"
            android:summary="@string/hide_fab_summary"
            android:title="@string/hide_fab"/>
        <Preference
            android:layout="@layout/preference_item"
            android:summary=""
            android:title="@string/other_preference"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other">

        <Preference
            android:layout="@layout/preference_item"
            android:summary="@string/feedback_summary"
            android:title="@string/feedback"/>

        <Preference
            android:layout="@layout/preference_item"
            android:summary="@string/donate_summary"
            android:title="@string/donate"/>

        <Preference
            android:layout="@layout/preference_item"
            android:summary="@string/app_LTS"
            android:title="@string/about"/>

    </PreferenceCategory>

</PreferenceScreen>