<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lilystudio.wheretosleepinnju.setting.SettingActivity">

    <include layout="@layout/title_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@android:id/title"
                style="@style/CategoryStyle"
                android:text="@string/edit_class_schedule" />

            <!--edit menu-->
            <com.lilystudio.wheretosleepinnju.custom.settting.SettingItemNormal
                android:id="@+id/sin_user_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_title="@string/user_add"
                app:showSwitch="false"
                app:summary="@string/user_add_summary" />

            <!--分割线-->
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1dp"
                android:background="@color/divider" />

            <com.lilystudio.wheretosleepinnju.custom.settting.SettingItemNormal
                android:id="@+id/sin_import_nju"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_title="@string/import_nju"
                app:showSwitch="false"
                app:summary="@string/import_nju_description" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1dp"
                android:background="@color/divider" />

            <com.lilystudio.wheretosleepinnju.custom.settting.SettingItemNormal
                android:id="@+id/sin_kb_manage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_title="@string/kb_manage"
                app:showSwitch="false"
                app:summary="@string/kb_manage_description" />

            <TextView
                android:id="@android:id/title"
                style="@style/CategoryStyle"
                android:text="@string/text_preference" />

            <com.lilystudio.wheretosleepinnju.custom.settting.SettingItemNormal
                android:id="@+id/sin_hide_fab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:detach="true"
                app:item_title="@string/hide_fab"
                app:showSwitch="true"
                app:summary="@string/hide_fab_summary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1dp"
                android:background="@color/divider" />


            <HorizontalScrollView
                android:id="@+id/hsv_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_16dp"
                android:scrollbars="none">

                <LinearLayout
                    android:id="@+id/layout_theme"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <!--TODO 替换-->
                    <com.lilystudio.wheretosleepinnju.custom.ColorImageView
                        android:layout_width="@dimen/margin_24dp"
                        android:layout_height="@dimen/margin_24dp"
                        app:bgcolor="@color/secondary_nanjing_blue" />

                    <com.lilystudio.wheretosleepinnju.custom.ColorImageView
                        android:layout_width="@dimen/margin_24dp"
                        android:layout_height="@dimen/margin_24dp"
                        android:layout_marginLeft="@dimen/margin_24dp"
                        app:bgcolor="@color/secondary_forgive_green" />

                    <com.lilystudio.wheretosleepinnju.custom.ColorImageView
                        android:layout_width="@dimen/margin_24dp"
                        android:layout_height="@dimen/margin_24dp"
                        android:layout_marginLeft="@dimen/margin_24dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        app:bgcolor="@color/secondary_ms_blue" />

                    <com.lilystudio.wheretosleepinnju.custom.ColorImageView
                        android:layout_width="@dimen/margin_24dp"
                        android:layout_height="@dimen/margin_24dp"
                        android:layout_marginLeft="@dimen/margin_24dp"
                        app:bgcolor="@color/secondary_nju_purple" />

                    <com.lilystudio.wheretosleepinnju.custom.ColorImageView
                        android:layout_width="@dimen/margin_24dp"
                        android:layout_height="@dimen/margin_24dp"
                        android:layout_marginLeft="@dimen/margin_24dp"
                        app:bgcolor="@color/secondary_tomato_red" />

                    <com.lilystudio.wheretosleepinnju.custom.ColorImageView
                        android:layout_width="@dimen/margin_24dp"
                        android:layout_height="@dimen/margin_24dp"
                        android:layout_marginLeft="@dimen/margin_24dp"
                        app:bgcolor="@color/secondary_bubble_pink" />

                    <com.lilystudio.wheretosleepinnju.custom.ColorImageView
                        android:layout_width="@dimen/margin_24dp"
                        android:layout_height="@dimen/margin_24dp"
                        android:layout_marginLeft="@dimen/margin_24dp"
                        app:bgcolor="@color/secondary_lake_green" />

                    <com.lilystudio.wheretosleepinnju.custom.ColorImageView
                        android:layout_width="@dimen/margin_24dp"
                        android:layout_height="@dimen/margin_24dp"
                        android:layout_marginLeft="@dimen/margin_24dp"
                        app:bgcolor="@color/secondary_iris_purple" />

                    <com.lilystudio.wheretosleepinnju.custom.ColorImageView
                        android:layout_width="@dimen/margin_24dp"
                        android:layout_height="@dimen/margin_24dp"
                        android:layout_marginLeft="@dimen/margin_24dp"
                        app:bgcolor="@color/secondary_pine_blue" />
                </LinearLayout>
            </HorizontalScrollView>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1dp"
                android:background="@color/divider" />

            <com.lilystudio.wheretosleepinnju.custom.settting.SettingItemNormal
                android:id="@+id/sin_more_pref"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_title="@string/more_pref"
                app:showSwitch="false"
                app:summary="@string/more_pref_summary" />


            <TextView
                style="@style/CategoryStyle"
                android:text="@string/other" />

            <com.lilystudio.wheretosleepinnju.custom.settting.SettingItemNormal
                android:id="@+id/sin_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_title="@string/feedback"
                app:summary="@string/feedback_summary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1dp"
                android:background="@color/divider" />

            <com.lilystudio.wheretosleepinnju.custom.settting.SettingItemNormal
                android:id="@+id/sin_donate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_title="@string/donate"
                app:summary="@string/donate_summary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1dp"
                android:background="@color/divider" />

            <com.lilystudio.wheretosleepinnju.custom.settting.SettingItemNormal
                android:id="@+id/sin_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:item_title="@string/about"
                app:summary="@string/app_LTS" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1dp"
                android:background="@color/divider" />
            <!--<FrameLayout-->
            <!--android:id="@+id/content"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:visibility="gone" />-->


        </LinearLayout>
    </ScrollView>


</LinearLayout>
